LevenshteinShortestPaths started